Update back-end certificate

--- a/index.html
+++ b/index.html
@@ -56,10 +56,11 @@
   <main>
     <section id="skills">
       <h1 class="text-center display-1 mb-5">Skills</h1>
-      <p class="text-center mb-5 pb-2">These are all the languages and frameworks that I've used and experienced with while developing my own projects.</p>
+      <p class="text-center mb-5 pb-2">These are all the languages and frameworks that I've used and experienced with
+        while developing my own projects.</p>
       <div class="col-sm-8 col-10 mx-auto d-flex flex-wrap justify-content-center gap-5">
         <img class="logo" src="images/Logos/HTML.png" alt="HTML logo" data-bs-toggle="tooltip" data-bs-placement="top"
-        data-bs-title="HTML">
+          data-bs-title="HTML">
         <img class="logo" src="images/Logos/CSS.png" alt="CSS logo" data-bs-toggle="tooltip" data-bs-placement="top"
           data-bs-title="CSS">
         <img class="logo" src="images/Logos/JavaScript.png" alt="Javascript logo" data-bs-toggle="tooltip"
@@ -80,13 +81,14 @@
     </section>
     <section id="certificates">
       <h1 class="text-center display-1 mb-5 px-3">Certificates</h1>
-      <p class="text-center my-4">Below are certificates I've received for completing online courses that I found on the internet.</p>
+      <p class="text-center my-4">Below are certificates I've received for completing online courses that I found on the
+        internet.</p>
       <div class="container">
         <div class="accordion" id="accordionCertificate">
           <div class="accordion-item">
             <h2 class="accordion-header">
-              <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFrontEnd"
-                aria-expanded="true" aria-controls="collapseFrontEnd">
+              <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                data-bs-target="#collapseFrontEnd" aria-expanded="true" aria-controls="collapseFrontEnd">
                 Front-End Certificates
               </button>
             </h2>
@@ -113,17 +115,28 @@
               <div class="accordion-body">
                 <ul class="list-group">
                   <li class="list-group-item">
-                    <a href="https://www.freecodecamp.org/certification/fccbf4b6e5e-a794-4929-b7aa-5883a808219d/back-end-development-and-apis" target="_blank" rel="noopener noreferrer">freeCodeCamp: Back End Development and APIs Certification</a>
+                    <a href="https://www.freecodecamp.org/certification/fccbf4b6e5e-a794-4929-b7aa-5883a808219d/javascript-algorithms-and-data-structures"
+                      target="_blank" rel="noopener noreferrer">
+                      freeCodeCamp: JavaScript Algorithms and Data Structures
+                    </a>
                   </li>
                   <li class="list-group-item">
-                    <a href="https://www.dicoding.com/certificates/KEXLL13YWXG2" target="_blank" rel="noopener noreferrer">Dicoding: Cloud Practitioner Essentials</a>
+                    <a href="https://www.freecodecamp.org/certification/fccbf4b6e5e-a794-4929-b7aa-5883a808219d/back-end-development-and-apis"
+                      target="_blank" rel="noopener noreferrer">freeCodeCamp: Back End Development and APIs
+                      Certification</a>
                   </li>
                   <li class="list-group-item">
-                    <a href="http://dicoding.com/certificates/53XE4O519ZRN" target="_blank" rel="noopener noreferrer">Dicoding: Javascript Fundamentals</a>
+                    <a href="https://www.dicoding.com/certificates/KEXLL13YWXG2" target="_blank"
+                      rel="noopener noreferrer">Dicoding: Cloud Practitioner Essentials</a>
                   </li>
-                    <li class="list-group-item">
-                      <a href="http://dicoding.com/certificates/07Z68775YXQR" target="_blank" rel="noopener noreferrer">Dicoding: Beginner's Guide to Creating a Back-End Application</a>
-                    </li>
+                  <li class="list-group-item">
+                    <a href="http://dicoding.com/certificates/53XE4O519ZRN" target="_blank"
+                      rel="noopener noreferrer">Dicoding: Javascript Fundamentals</a>
+                  </li>
+                  <li class="list-group-item">
+                    <a href="http://dicoding.com/certificates/07Z68775YXQR" target="_blank"
+                      rel="noopener noreferrer">Dicoding: Beginner's Guide to Creating a Back-End Application</a>
+                  </li>
                 </ul>
               </div>
             </div>
@@ -139,13 +152,16 @@
               <div class="accordion-body">
                 <ul class="list-group">
                   <li class="list-group-item">
-                    <a href="https://drive.google.com/file/d/1wZKaAxJpeQ7HrZFQHIOum0hnQifEHSUB/view?usp=sharing" target="_blank" rel="noopener noreferrer">Indonesia High School Informatics OSN-K Certificate</a>
+                    <a href="https://drive.google.com/file/d/1wZKaAxJpeQ7HrZFQHIOum0hnQifEHSUB/view?usp=sharing"
+                      target="_blank" rel="noopener noreferrer">Indonesia High School Informatics OSN-K Certificate</a>
                   </li>
                   <li class="list-group-item">
-                    <a href="https://drive.google.com/file/d/1weSysYUBiUnNf5ig6T21WnGyQlCwTMij/view?usp=sharing" target="_blank" rel="noopener noreferrer">Brighten English: TOEFL Certificate of Achievement</a>
+                    <a href="https://drive.google.com/file/d/1weSysYUBiUnNf5ig6T21WnGyQlCwTMij/view?usp=sharing"
+                      target="_blank" rel="noopener noreferrer">Brighten English: TOEFL Certificate of Achievement</a>
                   </li>
                   <li class="list-group-item">
-                    <a href="https://drive.google.com/file/d/1-Id3J5cUiKLuvz0QQITKUoiy5xCNo-Sn/view?usp=sharing" target="_blank" rel="noopener noreferrer">RevoU: Intro to Software Engineering Certificate</a>
+                    <a href="https://drive.google.com/file/d/1-Id3J5cUiKLuvz0QQITKUoiy5xCNo-Sn/view?usp=sharing"
+                      target="_blank" rel="noopener noreferrer">RevoU: Intro to Software Engineering Certificate</a>
                   </li>
                 </ul>
               </div>
