Add more Certificate

--- a/index.html
+++ b/index.html
@@ -96,6 +96,11 @@
               <div class="accordion-body">
                 <ul class="list-group">
                   <li class="list-group-item">
+                    <a href="https://www.freecodecamp.org/certification/fccbf4b6e5e-a794-4929-b7aa-5883a808219d/responsive-web-design" target="_blank" rel="noopener noreferrer">
+                      freeCodeCamp: Responsive Web Design
+                    </a>
+                  </li>
+                  <li class="list-group-item">
                     <a href="http://dicoding.com/certificates/53XE4O519ZRN" target="_blank" rel="noopener noreferrer">
                       Dicoding: Javascript Fundamentals
                     </a>
